--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
+    "emotion-reset": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
