chore : globalstyle, absolute path setting

--- a/next-typescript-boilerplate/.eslintrc
+++ b/next-typescript-boilerplate/.eslintrc
@@ -22,7 +22,7 @@
       "env": {
         "browser": true,
         "node": true,
-        "es6": true,
+        "es6": true
       },
       "extends": [
         "eslint:recommended",
@@ -54,8 +54,8 @@
         // Includes .prettierrc.js rules
         "prettier/prettier": ["error", {}, {
           "usePrettierrc": true
-        }],
-      },
-    },
-  ],
+        }]
+      }
+    }
+  ]
 }
