--- a/next-typescript-boilerplate/.prettierrc
+++ b/next-typescript-boilerplate/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "semi": false,
-  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 120,
+  "semi": true,
   "tabWidth": 2,
-  "useTabs": false
+  "trailingComma": "all",
+  "printWidth": 120,
+  "arrowParens": "always"
 }
