--- a/react-redux-typescript-boilerplate/package.json
+++ b/react-redux-typescript-boilerplate/package.json
@@ -15,13 +15,18 @@
     "@emotion/styled": "^11.3.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "emotion-reset": "^3.0.1",
+    "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
@@ -31,7 +36,9 @@
     "@babel/preset-typescript": "^7.14.5",
     "@emotion/babel-plugin": "^11.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/axios": "^0.14.0",
     "@types/node": "^16.3.3",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
     "@types/webpack": "^5.28.0",
